[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "torchtools"
version = "0.0.0"
description = "PyTorch port of Sionna utilities and modules (sionna_torch)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "zclu-zju" } ]
requires-python = ">=3.8"
keywords = ["pytorch","torch","tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["torchtools", "torchtools.*", "torchtools/**", "torchtools/**"]
